--- a/src/posts/wk1-be-more-like-robbie.mdx
+++ b/src/posts/wk1-be-more-like-robbie.mdx
@@ -8,7 +8,7 @@ postImages:
 ---
 
 <img
-  src="../images/post-images/kermit.gif"
+  src="https://hellostu.xyz/gifs/kermit.gif"
   className="imageRight"
   title="kermit types fast"
 />
@@ -34,7 +34,7 @@ This weeks assignment had me visualising data to tell a story around some Fire S
 ## Things I’m learning
 
 <img
-  src="../images/post-images/data.gif"
+  src="https://hellostu.xyz/gifs/data.gif"
   className="imageLeft"
   title="multi-tasking"
 />
