--- a/src/posts/wk2-how-high.mdx
+++ b/src/posts/wk2-how-high.mdx
@@ -48,7 +48,7 @@ I like to think there is plenty above I already bring into my work practice but 
 **New projects and teams...** I've been in a couple of planning sessions this week for new projects. The projects are super interesting and I'm looking forward to working with some new team members. One project in particular will see me contributing to some strategy work (which is well timed based on my learning from last week). **I'm very excited!**
 
 <img
-  src="../images/post-images/queer-eye.gif"
+  src="https://hellostu.xyz/gifs/queer-eye.gif"
   className="imageRight"
   title="yass queen!"
 />
