--- a/src/posts/wk3-dear-diary.mdx
+++ b/src/posts/wk3-dear-diary.mdx
@@ -60,7 +60,7 @@ Alex and Kris had organised a social event for the team. After racking up a fair
 Another reasonably early start to pack up by bag and head to the office to grab supplies for a project kick-off. My Macbook Air decided to attempt an update, failed miserably and went into an annoying boot loop. After demonstrating all of the normal behaviours of swearing and gently beating my fists on the keyboard like a tired and confused ape, the internet came to the rescue with '[how to boot a mac into safe mode](https://www.google.com/search?q=how+to+boot+a+mac+into+safe+mode&rlz=1C5CHFA_enGB814GB814&oq=how+to+boot+a+mac+into+safe+mode&aqs=chrome..69i57j0l5.6606j0j4&sourceid=chrome&ie=UTF-8)'. I was then able to sort out the rogue update and get on with my day. Still a frustrating waste of an hour.
 
 <img
-  src="../../images/post-images/monkey.gif"
+  src="https://hellostu.xyz/gifs/monkey.gif"
   className="imageLeft"
   title="computer says no"
 />
