--- a/src/posts/1-seeking-inspiration-and-comfort.mdx
+++ b/src/posts/1-seeking-inspiration-and-comfort.mdx
@@ -26,3 +26,5 @@ I’d like to get a collection of images that spans 52 weeks before I consider t
 - Making things and being creative is something I enjoy. I don’t profess to be a master of photography but I completed a similar project about 10 years ago and it really helped me improve. My skills have started to become rusty and I’d like to refresh them. I also quite enjoy the process of trying to come up with fresh ideas of how to capture what is actually a pretty dull subject (me!)
 - The last half of 2022 was pretty brutal for me personally and it’s taken its toll on my mental health. I hope holding myself to account for documenting the year that’s starting to unfold will help me regularly reflect and make sure I’m keeping my mental health in check, actively seeking out time for happiness and sticking to some of the self-care rituals I’ve put in place.
 - Why not?
+
+I'm always open to feedback and comments so please share your thoughts below.
