--- a/src/posts/2-running-around.mdx
+++ b/src/posts/2-running-around.mdx
@@ -17,7 +17,7 @@ import { getImage, GatsbyImage } from 'gatsby-plugin-image'
   className="imageFull"
 />
 
-This is the second in my series of self-portraits ([read about more about the project here](/posts/1-seeking-inspiration-and-comfort/)). As I suggested in the first post some of the project would likley be snaps taken on my iphone - and this one falls into that category. I've only recently switched to an iphone and actually I'm quite happy with the quality of this shot. The photo was taken by setting a 10 second timer and propping up the phone precariously on the top of a fence post with suport from a small rock I found nearby. I'm annoyed I've got a bit of a grumpy expression on my face and my hair is all squiffy. This was partly caused by the exhaustion of the preceeding run kicking in and partly by me trying to figure out the camera settings required to get something passable quickly before I returned home to warm up again. Out of 5 or 6 frames this is about the only one where I got the focus right so we'll all have to put up my silly grumpy face. I guess it adds some interest if nothing else. Tell me what you think in the comments below.
+This is the second in my series of self-portraits ([read about more about the project here](/posts/1-seeking-inspiration-and-comfort/)). As I suggested in the first post some of the project would likley be snaps taken on my iphone - and this one falls into that category. I've only recently switched to an iphone and actually I'm quite happy with the quality of this shot. The photo was taken by setting a 10 second timer and propping up the phone precariously on the top of a fence post with suport from a small rock I found nearby. I'm annoyed I've got a bit of a grumpy expression on my face and my hair is all squiffy. This was partly caused by the exhaustion of the preceeding run kicking in and partly by me trying to figure out the camera settings required to get something passable quickly before I returned home to warm up again. Out of 5 or 6 frames this is about the only one where I got the focus right so we'll all have to put up with my silly grumpy face. I guess it adds some interest if nothing else. Tell me what you think in the comments below.
 
 ## Talking about running
 
