--- a/src/posts/3-skip-intro.mdx
+++ b/src/posts/3-skip-intro.mdx
@@ -21,9 +21,9 @@ I almost copped out and posted yet another running selfie today! All of the snap
 
 ### Weekly roundup
 
-1. Work felt _hard_ this week. Not necessarily in a bad way - I feel like many aspects of the week were pretty positive and I made lots of progress across many things. I finished it really tired though and a little burnt out. I often fall into the trap of caring a little too much, which means I can lose perspective, lean in, and obsess over silly details. Next week I need to make sure I do a better job managing my diary and carving out enough time for breaks and balance.
+1. Work felt _hard_ this week. Not necessarily in a bad way - I feel like many aspects of the week were pretty positive and I made lots of progress across many things. I finished it tired though and a little burnt out. I often fall into the trap of caring a little too much, which means I can lose perspective, lean in, and obsess over silly details. Next week I need to make sure I do a better job managing my diary and carving out enough time for breaks and balance.
 
-2. I’ve booked a holiday by myself towards the end of the month. I need this break but I’ve never travelled alone before (other than for work). I’m excited and really anxious in equal measure. I could write lots more about this topic but now is not the time. I’ll probably write more closer to departure or maybe even write whilst I’m away.
+2. I’ve booked a holiday by myself towards the end of the month. I need this break but I’ve never travelled alone before (other than for work). I’m excited and anxious in equal measure. I could write lots more about this topic but now is not the time. I’ll probably write more closer to departure or maybe even write whilst I’m away.
 
 3. I caught up with two friends this week. One I hadn’t seen in over 12 months. Catching up on all of what life has thrown us recently was a little overwhelming but also cathartic. I need to put more effort and energy into some of my friendships.
 
