--- a/src/posts/4-stepping-into-the-light.mdx
+++ b/src/posts/4-stepping-into-the-light.mdx
@@ -23,10 +23,10 @@ Using a [flash off-camera](https://strobist.blogspot.com/) opens up a world of p
 
 At the moment I don’t have a shoot-through umbrella to soften the light so I decided to embrace the constraint and create a little bit of drama by placing the flash unit up on the landing above me and casting some harsh shadows through the bannister and across the wall and carpet.
 
-I quite enjoyed shooting this. The flash unit I bought was cheaper than I remember them being. This may be because I’ve not purchased big brand names but they seem to work well and have more features than I’ll likely need. I can see myself getting another and playing with some more complex setups later down the line. Let me know what you think of this effort in the comments section.
+I quite enjoyed shooting this. The flash unit I bought was cheaper than I remember them being. This may be because I’ve [not purchased big brand names](https://godox.com/camera-flashes/) but they seem to work well and have more features than I’ll likely need. I can see myself getting another and playing with some more complex setups later down the line. Let me know what you think of this effort in the comments section.
 
 ### Elsewhere
 
 Work had some notable moments this week but nothing that’s easy to share or that I want to write about - I’m sure I won some, lost some and ended the week on a draw. No real complaints.
 
-Running life has continued strong. I’ve managed about 21 miles this week across 5 runs. Today I ran 8.6 miles which made me feel like a proper runner! My legs feel like I ran 16 miles and I’m a little worried the next few days I’ll be hobbling about like a very old man.
+Running life has continued strong. I’ve managed about 21 miles this week across 5 runs. Today I ran [8.6 miles](https://www.strava.com/activities/8549265537) which made me feel like a proper runner! My legs feel like I ran 16 miles and I’m a little worried the next few days I’ll be hobbling about like a very old man.
