--- a/src/posts/5-ablution.mdx
+++ b/src/posts/5-ablution.mdx
@@ -27,4 +27,4 @@ The setup was fairly simple in terms of camera and lighting. The only two tricky
 
 2. Therapy - I have a session booked in with a therapist on Tuesday. I’m hopeful it’ll be more useful than my previous experiences but I’m apprehensive. If anybody has any wise words or advice for a first session then please let me know.
 
-3. Travel - I’ll be travelling to Egypt on Friday for a mini-break by myself. I’ve started to pack and get organised but mostly my focus is on the huge amount of work I’m trying to squeeze into the 4 days I have left at work week before I head off. Roll on Friday!
+3. Travel - I’ll be travelling to Egypt on Friday for a mini-break by myself. I’ve started to pack and get organised but mostly my focus is on the huge amount of work I’m trying to squeeze into the 4 days I have left at work before I head off. Roll on Friday!
