--- a/src/posts/7-revolve.mdx
+++ b/src/posts/7-revolve.mdx
@@ -17,8 +17,10 @@ import { getImage, GatsbyImage } from 'gatsby-plugin-image'
   className="imageFull"
 />
 
-So a shot from my iPhone this week with no fancy flash work. I did splash out on an exotic location though! For the next few days, I’m in Hurghada, Egypt on the shore of the Red Sea for a little mini break. I’m nearly two full days in and have another two full days left, returning home late Wednesday. I used a little pocket [Gorillapod](https://joby.com/global/griptight-one-micro-stand-white-chrome-jb01493-0ww/) to hold the iPhone, attached it to a large ashtray thingy and set a 10-second timer before dashing behind the surfboard. I picked my moment as the sun was going down so that I didn’t have 50 other tourists crowding the scene. It does the job and keeps me on track to get 52 of these self-portraits in roughly a year.
+This week I’m back in the more familiar surroundings of Dorset. Not that you can tell but this shot was taken at the top of [Hambledon Hill](https://www.nationaltrust.org.uk/visit/dorset/hambledon-hill). Chloe and I went for a short 5-mile hike around this and another nearby hill fort ([Hod Hill](https://www.nationaltrust.org.uk/visit/dorset/hod-hill)). I thought it’d be nice to get a shot with the beautiful countryside behind me. Chloe stepped into the role of portable light stand and pointed the flash in my general direction (just off to the right of the frame). I set up a remote shutter using my phone and added a 5-second countdown to try and time some jumping photos. This and one other shot reasonably captured me at the right point in the jump, many others just froze me in mid-squat or awkward landing 😂.
 
-I made the last-minute decision to leave the fancy Olympus camera at home as I was getting close to the point of packing more gadgets than clothes which I feared would give me some unwanted attention going through airport security. This turned out to be the right call as the gadgets I did have were enough to get some questions from a man with a large automatic weapon on arrival! I fear any more gear would have earnt me more intense interrogation techniques 😂😬.
+When editing shots the jump looked fun, the landscape in the background just felt flat and grey (mostly due to the weather). The overall composition just felt off. So I’ve decided to just embrace the fun element and added some silly photoshop manipulation of the landscape to make it a bit more interesting. You can decide if I’m falling through a portal of time & space or powering myself across the Dorset countryside using some kind of sonic flatulence.
 
-I’m definitely enjoying the warm sunshine even if it doesn’t love me (I have a very sunburnt back despite the factor 4 million suncream I’ve bathed myself in at almost hourly intervals). The hotel is nice, the food good and the cocktails abundant. I miss having people to talk with but I’m beginning to adapt and I’ve been relaxing by listening to music, reading a book and watching the odd film either by the pool, on the beach or up in my room. I took a short walk out of the hotel today and took a few snaps [which I shared on Instagram](https://www.instagram.com/p/CpIXTvWNPi9/). Tomorrow I have a boat trip planned with some snorkelling but other than that I intend to keep putting my feet up and within strolling distance of the bar. Lazy but required.
+## Elsewhere
+
+Although back from Egypt I’m still on leave until tomorrow so most of my time has been spent chilling. On Thursday we took a trip to Marwell Zoo to break up the drive home from Gatwick. Friday was a bit more pedestrian with household chores, a haircut and a therapy appointment. The weekend has been all about walking, running and catching up with family.
