update to content

--- a/src/posts/7-revolve.mdx
+++ b/src/posts/7-revolve.mdx
@@ -23,4 +23,4 @@ When editing shots the jump looked fun, the landscape in the background just fel
 
 ## Elsewhere
 
-Although back from Egypt I’m still on leave until tomorrow so most of my time has been spent chilling. On Thursday we took a trip to Marwell Zoo to break up the drive home from Gatwick. Friday was a bit more pedestrian with household chores, a haircut and a therapy appointment. The weekend has been all about walking, running and catching up with family.
+Although back from Egypt I’m still on leave until tomorrow so most of my time has been spent chilling. On Thursday we took a trip to Marwell Zoo to break up the drive home from Gatwick. Friday was a bit more pedestrian with household chores, a haircut and a therapy appointment. The weekend has been all about walking, running and catching up with family. I feel quite well-rested and ready for work. How long this lasts…..we’ll see!
