--- a/src/posts/11-panda.mdx
+++ b/src/posts/11-panda.mdx
@@ -1,7 +1,7 @@
 ---
 title: 11 | Panda
 date: 2023-43-03
-description: 'The eleventh in a weekly series of photographic self-portraits of Stuart Mackenzie. This weeks photo I wear a panda mask and stare at my phone'
+description: 'The eleventh in a weekly series of photographic self-portraits of Stuart Mackenzie. In this weeks photo I wear a panda mask and stare at my phone'
 tags: ['52weeks', 'photography', 'creativity', 'self', 'mask']
 socialImage: '../images/52weeks/52_2023_11_thumb.jpg'
 postImages:
