--- a/src/posts/15-geometry.mdx
+++ b/src/posts/15-geometry.mdx
@@ -22,7 +22,7 @@ import { getImage, GatsbyImage } from 'gatsby-plugin-image'
 
 <GatsbyImage
   alt="Stuart puts and tugs on his beard in front of a wall containing two arty geometric prints"
-  title="Fourteen - Head above water"
+  title="Fifteen - Geometry"
   image={getImage(props.data.mdx.frontmatter.postImages[0])}
   className="imageFull"
 />
