--- a/src/posts/rambling-man.mdx
+++ b/src/posts/rambling-man.mdx
@@ -2,7 +2,7 @@
 title: Rambling man
 date: 2023-10-01
 description: 'A quick introduction to the hello stu audio notes'
-tags: ['podcast', 'audio', 'voice', 'note', 'reflections']
+tags: ['podcast', 'audio', 'voice', 'note', 'reflections', 'ultra-challenge']
 socialImage: '../images/social-image.jpg'
 ---
 
@@ -10,4 +10,6 @@ import Podcast from '../components/podcast'
 
 <Podcast audio="https://storage.googleapis.com/hello-stu/1-rambling-man.mp3" />
 
-A first foray into posting audio notes to my blog here. I'd previously been posting voice memos to a little project called memofrom.me but I've decided that has run its course. This is the next iteration. Hopefully I'll have it listed on your favourite podcast app soon and I'll add in some subscription links.
+My first foray into posting audio notes to my blog here. I'd previously been posting voice memos to a little project called [Memo From Me](https://memofrom.me), but I've decided that has run its course. This is the next iteration. Hopefully, I'll have it listed on your favourite podcast app soon, and I'll add in some subscription links.
+
+In this note, I give some of the context and then start talking about my decision to take on 58km (36 miles) as part of [The Jurassic Coast Ultra Challenge](https://www.ultrachallenge.com/jurassic-coast-challenge/) in May next year. I've decided to do this to challenge myself mentally and physically in addition to raising some money for [mind - the mental health charity](https://www.mind.org.uk/). You can support me by [donating here at my fundraising page](https://www.justgiving.com/page/disco-jurassic-challenge).
