--- a/src/posts/zen-friday.mdx
+++ b/src/posts/zen-friday.mdx
@@ -2,18 +2,7 @@
 title: Zen Friday
 date: 2023-10-20
 description: 'A random update recorded whilst hiking around Maiden Castle. I briefly cover work, friends, fitness and 100 parkruns!'
-tags:
-  [
-    'podcast',
-    'audio',
-    'voice',
-    'note',
-    'update',
-    'life',
-    'work',
-    'friends',
-    'fitness',
-  ]
+tags: ['podcast', 'audio', 'update', 'life', 'work', 'friends', 'fitness']
 socialImage: '../images/social-image.jpg'
 ---
 
