--- a/src/posts/zen-friday.mdx
+++ b/src/posts/zen-friday.mdx
@@ -6,9 +6,8 @@ tags: ['podcast', 'audio', 'update', 'life', 'work', 'friends', 'fitness']
 socialImage: '../images/social-image.jpg'
 ---
 
-import Podcast from '../components/podcast'
 
-<Podcast audio="https://storage.googleapis.com/hello-stu/2-zen-friday.mp3" />
+<iframe src="https://embed.acast.com/660872d53207c3001751e852/660872da3207c3001751e8fe?accentColor=F0F2F5&bgColor=e40404&secondaryColor=F0F2F5" frameBorder="0" width="100%" height="110px"></iframe>
 
 A random update recorded whilst hiking around Maiden Castle. I briefly cover work, friends, fitness and 100 parkruns!
 
