--- a/src/posts/zen-friday.mdx
+++ b/src/posts/zen-friday.mdx
@@ -7,7 +7,7 @@ socialImage: '../images/social-image.jpg'
 ---
 
 
-<iframe src="https://embed.acast.com/660872d53207c3001751e852/660872da3207c3001751e8fe?accentColor=F0F2F5&bgColor=e40404&secondaryColor=F0F2F5" frameBorder="0" width="100%" height="110px"></iframe>
+<iframe src="https://embed.acast.com/660872d53207c3001751e852/zen-friday?accentColor=F0F2F5&bgColor=e40404&secondaryColor=F0F2F5" frameBorder="0" width="100%" height="110px" className="audioplayer"></iframe>
 
 A random update recorded whilst hiking around Maiden Castle. I briefly cover work, friends, fitness and 100 parkruns!
 
