--- a/src/content/posts/13--TGF-data-dive.mdx
+++ b/src/content/posts/13--TGF-data-dive.mdx
@@ -1,7 +1,7 @@
 ---
 title: TGF parkrun data dive
 draft: false
-slug: tgf-parkrun-data-drive
+slug: TGF-data-dive
 pubDate: 2022-03-19
 description: 'A little weekend project looking at the data from the first 20 events of The Great Field parkrun'
 postImage:
