bunch of changes

--- a/src/content/posts/xx-strava-test.mdx
+++ b/src/content/posts/xx-strava-test.mdx
@@ -11,8 +11,12 @@ socialImage: '/social_images/34-old-new-site.jpg'
 tags: ['astro', 'gatsby', 'build', 'design', 'code', 'tech']
 ---
 
+import BlogPie from '/src/components/react/blogging/piechart.jsx'
 import Strava from '/src/components/other/Strava.astro'
 
-Some words
+
+<BlogPie client:visible />
+I won't share names in this post but I can tell you we've had **4 individuals who've crossed the line at all 20 events** at The Great Field. According to their parkrun profiles two of those four were brand new to parkrun at our first event and have so far (in terms of parkrun attendance) only ever run with us, which is a most impressive streak indeed! 
+
 
 <Strava stravaClass="imageFull" activity="11443875376" />
