--- a/src/content/posts/35-blogging-about-not-blogging.mdx
+++ b/src/content/posts/35-blogging-about-not-blogging.mdx
@@ -39,4 +39,4 @@ Time spent correcting mistakes is my next biggest hurdle to overcome. I was usin
 
 Anyway - somehow I've managed to blog about not blogging. Which means I am actualy blogging and not, not blogging...or something like that? 🤯 I'm going to dance over to my blog and smash the publish button now - 'cos hopefully nobody is reading this nonsense anyway 😜
 
-Post Cover Photo by [Sebastian Banasiewcz](https://unsplash.com/@kamiseba?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash)
+_Post Cover Photo by [Sebastian Banasiewcz](https://unsplash.com/@kamiseba?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash)_
