--- a/src/content/posts/35-blogging-about-not-blogging.mdx
+++ b/src/content/posts/35-blogging-about-not-blogging.mdx
@@ -15,7 +15,7 @@ import BlogPie from '/src/components/react/blogging/piechart.jsx'
 
 This post was inspired by Jukesie’s post - [Introducing bloggers about blogging](https://digitalbydefault.com/2024/05/12/introducing-bloggers-about-blogging/)
 
-I’ve _kind of_ blogged for many years, but it’s always in fits and starts and the writing habit seldom sticks for long. I don't think I could call myself a blogger though. 
+I’ve _kind of_ blogged for many years, but it’s always in fits and starts and the writing habit seldom sticks for long. I don't think I could call myself a _proper_ blogger. 
 
 The few periods where I’ve successfully hit any kind of cadence or habit over time have usually coincided with a photographic project. My longest streak being my 365days project where I shared a self portrait and blog post every day for a year on Flickr. I also had a long running series of #seenonmyrun posts back in the early days of my running obsession. Those were all shared on a tumblr-esque platform I can’t even recall the name of. At some point they were all migrated onto one of the many Wordpress sites I’ve had in the past, all long since retired. I guess although these endeavours are a form of blogging the photograph is the star of the show and not the written word.
 
