--- a/src/content/posts/35-blogging-about-not-blogging.mdx
+++ b/src/content/posts/35-blogging-about-not-blogging.mdx
@@ -19,7 +19,7 @@ I’ve _kind of_ blogged for many years, but it’s always in fits and starts an
 
 The few periods where I’ve successfully hit any kind of cadence or habit over time have usually coincided with a photographic project. My longest streak being my 365days project where I shared a self portrait and blog post every day for a year on Flickr. I also had a long running series of #seenonmyrun posts back in the early days of my running obsession. Those were all shared on a tumblr-esque platform I can’t even recall the name of. At some point they were all migrated onto one of the many Wordpress sites I’ve had in the past, all long since retired. I guess although these endeavours are a form of blogging the photograph is the star of the show and not the written word.
 
-I finding writing hard. I’ve increasingly become convinced I have some form of dyslexia and that’s partly the reason I’ve been experimenting with [audio-notes](/podcasts). I mostly take solace in the fact that I haven’t ever totally given up. Most of the content I’ve created still exists in one form or another even if it doesn’t exist on the internet and stitched together it does all form a fascinating historical record of my life, thoughts and experiences. I find there is value in having those records, especially if your memory is as awful as mine! I also find writing an extremely useful tool for making sense of and organising my thoughts and feelings. For these reasons and despite by repeated failures to hit a consistent rhythm I'm unlikley to give up trying anytime soon.
+I finding writing hard. I’ve increasingly become convinced I have some form of dyslexia and that’s partly the reason I’ve been experimenting with [audio-notes](/podcasts). I mostly take solace in the fact that I haven’t ever totally given up. Most of the content I’ve created still exists in one form or another even if not published on the internet. Going back through it all does all form a fascinating historical record of my life, thoughts and experiences. I find there is value in having those records, especially if your memory is as awful as mine! I also find writing an extremely useful tool for making sense of and organising my thoughts and feelings. For these reasons and despite by repeated failures to hit a consistent rhythm I'm unlikley to give up trying anytime soon.
 
 I thought it'd be fun to spent a few minutes reflecting on my writing process and what takes me the most time in the hope it might help be unblock the reasons I’m **not** blogging more frequently. The less than scientific results of this exercise visualised below..
 
