--- a/src/content/posts/35-blogging-about-not-blogging.mdx
+++ b/src/content/posts/35-blogging-about-not-blogging.mdx
@@ -33,7 +33,7 @@ I love Juksie’s advice here…
 
 > “Don’t fear the publish button – dance like nobody is watching and blog like nobody is reading…because usually they aren’t. . .Write for yourself. . ." - Matt Jukes
 
-This particularly resonates because that IS my approach to dancing - It’s why disco is one of my nicknames. So applying this same technique to writing feels both plausible and an opportunity for fun. This was also a consideration in the redesign of my website that I [wrote about yesterday](/posts/building-things/). I want my blog to me primarily about me and for me. I'd benefit from spending far less time getting hung up on whether what I post is ‘good enough’. If anybody else does read them and find them useful that's just a bonus. 
+This particularly resonates because that IS my approach to dancing - It’s why disco is one of my nicknames. So applying this same technique to writing feels both plausible and an opportunity for fun. This was also a consideration in the redesign of my website that I [wrote about yesterday](/posts/building-things/). I want my blog to me primarily be about me and for me. I'd benefit from spending far less time getting hung up on whether what I post is ‘good enough’. If anybody else does read them and find them useful that's just a bonus. 
 
 Time spent correcting mistakes is my next biggest hurdle to overcome. I was using [grammarly](https://www.grammarly.com/) for a time which was useful but I also found it coud be quite annoying, popping up in all sorts of places across my mac. I may revist the app and just spend some time fine-tuning settings.  If anybody has any suggestions for alternatives though please let me know. 
 
