--- a/src/content/posts/35-blogging-about-not-blogging.mdx
+++ b/src/content/posts/35-blogging-about-not-blogging.mdx
@@ -37,6 +37,6 @@ This particularly resonates because that IS my approach to dancing - It’s why 
 
 Time spent correcting mistakes is my next biggest hurdle to overcome. I was using [grammarly](https://www.grammarly.com/) for a time which was useful but I also found it coud be quite annoying, popping up in all sorts of places across my mac. I may revist the app and just spend some time fine-tuning settings.  If anybody has any suggestions for alternatives though please let me know. 
 
-Anyway - somehow I've managed to blog about not blogging. Which means I am actualy blogging and not, not blogging...or something like that? 🤯 I'm going to dance over to my blog and smash the publish button now - 'cos hopefully nobody is reading this nonsense anyway 😜
+Anyway - somehow I've managed to blog about not blogging. Which means I am actualy blogging and not, not blogging...or something like that? 🤯 I'm going to dance over and smash the publish button now - 'cos hopefully nobody is reading this nonsense anyway 😜
 
 _Post Cover Photo by [Sebastian Banasiewcz](https://unsplash.com/@kamiseba?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash)_
