--- a/src/content/posts/35-blogging-about-not-blogging.mdx
+++ b/src/content/posts/35-blogging-about-not-blogging.mdx
@@ -3,7 +3,7 @@ title: Blogging about not blogging
 draft: false
 slug: blogging-about-not-blogging
 pubDate: 2024-05-31
-description: 'Blogging about not blogging and thiking out loud about some of the things that get in my way'
+description: 'Blogging about not blogging and thinking out loud about some of the things that get in my way'
 postImage:
   src: '../post_images/35-blogging_cover.jpg'
   alt: 'screenshot of old website with a TNT block overlayed'
