--- a/src/content/posts/35-blogging-about-not-blogging.mdx
+++ b/src/content/posts/35-blogging-about-not-blogging.mdx
@@ -29,7 +29,7 @@ A pie chart wasn't really needed was it? no...but I did enjoy making it!
 
 I clearly spend a good amount of time ‘Worrying too much about other people and their reactions’. This includes much self-doubt and over-thnking around the value of anything I might write or share. I'm certain I've never had an original thought. This isn’t a surprise and I know I’m not alone. It's a conversation I've had with lots of people on numerous occasions. In fact me and [Mathew Wilson](https://documenteering.com/) discussed it just the other week.
 
-I love Juksie’s advice here…
+I love Jukesie’s advice here…
 
 > “Don’t fear the publish button – dance like nobody is watching and blog like nobody is reading…because usually they aren’t. . .Write for yourself. . ." - Matt Jukes
 
