--- a/src/content/posts/35-blogging-about-not-blogging.mdx
+++ b/src/content/posts/35-blogging-about-not-blogging.mdx
@@ -15,28 +15,27 @@ import BlogPie from '/src/components/react/blogging/piechart.jsx'
 
 This post was inspired by Jukesie’s post - [Introducing bloggers about blogging](https://digitalbydefault.com/2024/05/12/introducing-bloggers-about-blogging/)
 
-I’ve _kind of_ blogged for many years, but it’s always in fits and starts and the writing habit seldom sticks for long. I don't think I could call myself a _proper_ blogger. 
+I’ve _kind of_ blogged for many years, but it’s always in fits and starts, and the writing habit seldom sticks for long. I don't think I could call myself a _proper_ blogger. 
 
-The few periods where I’ve successfully hit any kind of cadence or habit over time have usually coincided with a photographic project. My longest streak being my 365days project where I shared a self portrait and blog post every day for a year on Flickr. I also had a long running series of #seenonmyrun posts back in the early days of my running obsession. Those were all shared on a tumblr-esque platform I can’t even recall the name of. At some point they were all migrated onto one of the many Wordpress sites I’ve had in the past, all long since retired. I guess although these endeavours are a form of blogging the photograph is the star of the show and not the written word.
+The few periods where I’ve successfully hit any cadence or habit over time have usually coincided with a photographic project. My longest streak was my 365days project where I shared a self-portrait and blog post every day for a year on Flickr. I also had a long-running series of #seenonmyrun posts back in the early days of my running obsession. Those were all shared on a Tumblr-esque platform I can’t recall the name of. At some point, they were all migrated onto one of the many WordPress sites I’ve had in the past, all long since retired. Although these endeavours are a form of blogging the photograph is the star of the show and not the written word.
 
-I finding writing hard. I’ve increasingly become convinced I have some form of dyslexia and that’s partly the reason I’ve been experimenting with [audio-notes](/podcasts). I mostly take solace in the fact that I haven’t ever totally given up. Most of the content I’ve created still exists in one form or another even if not published on the internet. Going back through it all does all form a fascinating historical record of my life, thoughts and experiences. I find there is value in having those records, especially if your memory is as awful as mine! I also find writing an extremely useful tool for making sense of and organising my thoughts and feelings. For these reasons and despite by repeated failures to hit a consistent rhythm I'm unlikley to give up trying anytime soon.
+I find writing hard. I’ve increasingly become convinced I have some form of dyslexia and that’s partly the reason I’ve been experimenting with [audio-notes](/podcasts). I mostly take solace in the fact that I haven’t ever totally given up. Most of the content I’ve created still exists in one form or another even if not published online. Going back through it all forms a fascinating historical record of my life, thoughts and experiences. I find that those records can be really valuable, especially if your memory is as awful as mine! Writing has also become a handy tool for making sense of and organising my thoughts and feelings. For these reasons and despite my repeated failures to hit a consistent rhythm, I’m unlikely to give up trying anytime soon.
 
-I thought it'd be fun to spent a few minutes reflecting on my writing process and what takes me the most time in the hope it might help be unblock the reasons I’m **not** blogging more frequently. The less than scientific results of this exercise visualised below..
+I thought it'd be fun to spend a few minutes reflecting on my writing process and what takes me the most time in the hope that it might help me unblock the reasons I’m not blogging more frequently. The less-than-scientific results of this exercise are visualised below.
 
 <BlogPie client:visible />
 
 A pie chart wasn't really needed was it? no...but I did enjoy making it!
 
-I clearly spend a good amount of time ‘Worrying too much about other people and their reactions’. This includes much self-doubt and over-thnking around the value of anything I might write or share. I'm certain I've never had an original thought. This isn’t a surprise and I know I’m not alone. It's a conversation I've had with lots of people on numerous occasions. In fact me and [Mathew Wilson](https://documenteering.com/) discussed it just the other week.
+I spend a lot of time ‘Worrying too much about other people and their reactions’. This includes much self-doubt and overthinking the value of anything I might write or share. I’m certain I’ve never had an original thought. This isn’t a surprise, and I know I’m not alone. I’ve had this conversation with lots of people on numerous occasions. In fact, [Mathew Wilson](￼) and I discussed it just the other week.
 
 I love Jukesie’s advice here…
-
 > “Don’t fear the publish button – dance like nobody is watching and blog like nobody is reading…because usually they aren’t. . .Write for yourself. . ." - Matt Jukes
 
-This particularly resonates because that IS my approach to dancing - It’s why disco is one of my nicknames. So applying this same technique to writing feels both plausible and an opportunity for fun. This was also a consideration in the redesign of my website that I [wrote about yesterday](/posts/building-things/). I want my blog to primarily be about me and for me. I'd benefit from spending far less time getting hung up on whether what I post is ‘good enough’. If anybody else does read them and find them useful that's just a bonus. 
+This particularly resonates because that IS my approach to dancing - It’s why disco is one of my nicknames. So applying this same technique to writing feels both plausible and an opportunity for fun. This was also a consideration in the redesign of my website that I [wrote about yesterday](/posts/building-things/). I want my blog to be about me and for me primarily. I'd benefit from spending far less time getting hung up on whether what I post is ‘good enough’. If anybody else reads them and finds them helpful, that's just a bonus. 
 
-Time spent correcting mistakes is my next biggest hurdle to overcome. I was using [grammarly](https://www.grammarly.com/) for a time which was useful but I also found it coud be quite annoying, popping up in all sorts of places across my mac. I may revist the app and just spend some time fine-tuning settings.  If anybody has any suggestions for alternatives though please let me know. 
+Time spent correcting mistakes is my next biggest hurdle to overcome. I was using [grammarly](https://www.grammarly.com/) for a time, which was useful, but I also found it quite annoying, popping up in all sorts of places across my Mac. I may revisit the app and spend some time fine-tuning the settings. If anybody has any suggestions for alternatives, though, please let me know. 
 
-Anyway - somehow I've managed to blog about not blogging. Which means I am actualy blogging and not, not blogging...or something like that? 🤯 I'm going to dance over and smash the publish button now - 'cos hopefully nobody is reading this nonsense anyway 😜
+Anyway - I've managed to blog about not blogging. Which means I am actually blogging and not, not blogging...or something like that? 🤯 I'm going to dance over and smash the publish button now - 'cos hopefully nobody is reading this nonsense anyway 😜
 
 _Post Cover Photo by [Sebastian Banasiewcz](https://unsplash.com/@kamiseba?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash)_
