--- a/src/content/posts/35-blogging-about-not-blogging.mdx
+++ b/src/content/posts/35-blogging-about-not-blogging.mdx
@@ -27,7 +27,7 @@ I thought it'd be fun to spend a few minutes reflecting on my writing process an
 
 A pie chart wasn't really needed was it? no...but I did enjoy making it!
 
-I spend a lot of time ‘Worrying too much about other people and their reactions’. This includes much self-doubt and overthinking the value of anything I might write or share. I’m certain I’ve never had an original thought. This isn’t a surprise, and I know I’m not alone. I’ve had this conversation with lots of people on numerous occasions. In fact, [Mathew Wilson](￼) and I discussed it just the other week.
+I spend a lot of time ‘Worrying too much about other people and their reactions’. This includes much self-doubt and overthinking the value of anything I might write or share. I’m certain I’ve never had an original thought. This isn’t a surprise, and I know I’m not alone. I’ve had this conversation with lots of people on numerous occasions. In fact, [Mathew Wilson](https://documenteering.com/) and I discussed it just the other week.
 
 I love Jukesie’s advice here…
 > “Don’t fear the publish button – dance like nobody is watching and blog like nobody is reading…because usually they aren’t. . .Write for yourself. . ." - Matt Jukes
